--- a/deep_copy.html
+++ b/deep_copy.html
@@ -9,13 +9,13 @@
         age: 28
     };
 
-    let manFullCopy  //  your code
+    let manFullCopy = {...man}
 
 
     // 2. Array of primitives
     let numbers = [1, 2, 3];
 
-    let numbersFullCopy  //  your code
+    let numbersFullCopy = [...numbers]
 
 
     // 3. Object inside an object
@@ -28,7 +28,7 @@
         }
     };
 
-    let man1FullCopy // your code
+    let man1FullCopy = {...man1, mother: {...man1.mother}}
 
 
     // 4. Array of primitives inside an object
@@ -38,7 +38,7 @@
         friends: ["Peter", "Steven", "William"]
     };
 
-    let man2FullCopy  // your code
+    let man2FullCopy = {...man2, friends: [...man2.friends]}
 
 
     // 5 Array of objects
@@ -49,7 +49,7 @@
     ];
 
 
-    let peopleFullCopy  // your code
+    let peopleFullCopy = people.map(el => ({...el}))
 
 
     // 6 Array of objects inside object
@@ -63,7 +63,7 @@
         ]
     };
 
-    let man3FullCopy //  your code
+    let man3FullCopy = {...man3, friends: man3.friends.map(el => ({...el}))}
 
 
     // 7 Object inside an object, inside an object
@@ -80,7 +80,7 @@
         }
     };
 
-    let man4FullCopy //  your code
+    let man4FullCopy = {...man4, mother: {...man4.mother, work: {...man4.mother.work}}}
 
     // 8 Array of objects inside object -> object
     let man5 = {
@@ -100,7 +100,10 @@
         }
     };
 
-    let man5FullCopy //  your code
+    let man5FullCopy = {
+        ...man5,
+        mother: {...man5.mother, work: {...man5.mother.work}, parents: man5.mother.parents.map(el => ({...el}))}
+    }
 
 
     // 9 Object inside an object -> array -> object ->  object
@@ -133,48 +136,66 @@
         }
     };
 
-    let man6FullCopy  //  your code
+    let man6FullCopy = {
+        ...man6,
+        mother: {
+            ...man6.mother,
+            work: {...man6.mother.work},
+            parents: man6.mother.parents.map(el => ({...el, favoriteDish: {...el.favoriteDish}}))
+        }
+    }
 
 
     //10 Array of objects inside an object -> object -> array -> object ->  object
-    let man7 = {
-        name: 'John',
-        age: 28,
-        mother: {
-            name: "Kate",
-            age: 50,
-            work: {
-                position: "doctor",
-                experience: 15
-            },
-            parents: [
-                {
-                    name: "Kevin",
-                    age: 80,
-                    favoriteDish: {
-                        title: "borscht",
-                        ingredients: [
-                            {title: "beet", amount: 3},
-                            {title: "potatoes", amount: 5},
-                            {title: "carrot", amount: 1},
-                        ]
-                    }
+    let
+        man7 = {
+            name: 'John',
+            age: 28,
+            mother: {
+                name: "Kate",
+                age: 50,
+                work: {
+                    position: "doctor",
+                    experience: 15
                 },
-                {
-                    name: "Jennifer",
-                    age: 78,
-                    favoriteDish: {
-                        title: "sushi",
-                        ingredients: [
-                            {title: "fish", amount: 1},
-                            {title: "rise", amount: 0.5}
-                        ]
-                    }
-                },
-            ]
-        }
-    };
+                parents: [
+                    {
+                        name: "Kevin",
+                        age: 80,
+                        favoriteDish: {
+                            title: "borscht",
+                            ingredients: [
+                                {title: "beet", amount: 3},
+                                {title: "potatoes", amount: 5},
+                                {title: "carrot", amount: 1},
+                            ]
+                        }
+                    },
+                    {
+                        name: "Jennifer",
+                        age: 78,
+                        favoriteDish: {
+                            title: "sushi",
+                            ingredients: [
+                                {title: "fish", amount: 1},
+                                {title: "rise", amount: 0.5}
+                            ]
+                        }
+                    },
+                ]
+            }
+        };
 
-    let man7FullCopy  //  your code
+    let man7FullCopy = {
+        ...man7,
+        mother: {
+            ...man7.mother,
+            work: {...man7.mother.work},
+            parents: man7.mother.parents.map(el => ({
+                ...el,
+                favoriteDish: {...el.favoriteDish, ingredients: el.favoriteDish.ingredients.map(i => ({...i}))}
+            }))
+        }
+    }
 
 </script>
